--- a/Moview_review_textAnalysis.ipynb
+++ b/Moview_review_textAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -84,38 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#print(neg_words[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(neg_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -196,14 +165,14 @@
    ],
    "source": [
     "#User input text \n",
-    "user_input = '''I am abhijeet adhikary i do practice kill belongs kill from kishnaganj,blood donate my father is doctor fight and my mother is great\n",
+    "user_input = '''I am abhijeet adhikary i do practice on competitive programming, and i am happy to do that kill belongs kill from kishnaganj,blood donate my father is doctor fight and my mother is great\n",
     "my younger brothe is student'''\n",
     "print(user_input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +181,7 @@
        "'Good'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +218,8 @@
       "               insulting = True              Bad : Good   =     13.0 : 1.0\n",
       "              vulnerable = True             Good : Bad    =     12.3 : 1.0\n",
       "               ludicrous = True              Bad : Good   =     11.8 : 1.0\n",
-      "             uninvolving = True              Bad : Good   =     11.7 : 1.0\n",
       "                  avoids = True             Good : Bad    =     11.7 : 1.0\n",
+      "             uninvolving = True              Bad : Good   =     11.7 : 1.0\n",
       "              astounding = True             Good : Bad    =     10.3 : 1.0\n",
       "             fascination = True             Good : Bad    =     10.3 : 1.0\n",
       "                 idiotic = True              Bad : Good   =      9.8 : 1.0\n"
@@ -318,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -400,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +378,7 @@
        "(1800, 37673)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -433,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +414,7 @@
        "     verbose=0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -520,8 +489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier"
@@ -529,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -540,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +522,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -573,8 +544,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "acc = negih.score(test_features,test_labels)*100"
@@ -582,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -617,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -628,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +615,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,8 +626,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predicted_dt = clf.predict(test_features)"
@@ -662,14 +637,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.63\n"
+      "0.64\n"
      ]
     }
    ],
@@ -679,55 +654,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "test_labels = np.array(test_labels)"
+    "# Random forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def plotGraph(df,title):\n",
-    "    ax = df.plot.scatter(title=title,fontsize=10,x='actual',y='naive')\n",
-    "    ax.set_xlabel(\"\")\n",
-    "    ax.set_ylabel(\"\")\n",
-    "    plt.show()"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "classifier = RandomForestClassifier(n_estimators = 53, criterion = 'entropy', random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEICAYAAACktLTqAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAERBJREFUeJzt3X+MZWV9x/H3x10XawRFd4zKLiza\nhbghptgJpbFRDLZZoNlNG2p3U6K2xI226B+apmto0GATqaZSTWl1YxW1EUSS6gbW0qgQW+MiQ0EU\nyDbrusoULIMiaWL5sfbbP+4VL5c7O2d2753ZeXi/kknOec4z936fuXc+eeY5585JVSFJasuzlrsA\nSdL4Ge6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3KUjlGRDkkqyerlrkYYZ7pLUIMNdz1jOuNUyw13N\nSfLqJHck+Z8kX0jy+SR/leScJLNJ/iLJj4BPJTkxyQ1J5pI83N9eN/BYtyT5QJJvJXkkyZeSvHDo\nKf8oyQ+TPJTk0qUdrTSa4a6mJFkD/DNwNfBC4Brg9wa6vKTffgqwg97vwKf6+ycD/wv83dDDvgn4\nE+BlwCHgo0PHfws4HTgXuCzJK8c2IOkIxf8to5YkeS29QF9X/Td3kn8HbgG+AvwrcEJVPTrP9/8a\ncHNVndjfvwXYW1U7+/ubgDuBXwHWA98H1lfVbP/4t4APV9W1kxqj1IVrjmrNy4D/qqfOWu4b2J4b\nDPYkzwWuBDYDJ/abj0+yqqp+PuL7fwA8G1g70Pajge2fAc87uiFIR89lGbXmAeCkJBloWz+wPfyn\n6rvpLan8RlWdALy23z7f958MPAE8NJ5ypckw3NWabwI/By5JsjrJVuCsw/Q/nt46+0/7J0rfO6LP\nRUk29Wf5lwPXD8zqpWOS4a6mVNXjwO8DFwM/BS4CbgAem+db/pbe+vlDwF7gX0b0+Sy9E7Q/Ap4D\nvHOsRUsT4AlVNS/JrcDHqupTR/C9twD/VFWfGHth0gQ5c1dzkrwuyUv6yzJvBl7F6Bm51CyvllGL\nTgeuo3fVyveAC6vqgeUtSVpaLstIUoNclpGkBi3bsszatWtrw4YNy/X0krQi3X777Q9V1dRC/ZYt\n3Dds2MDMzMxyPb0krUhJftCln8syktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1aMHr3JN8\nEvhd4MGqOmPE8QAfAc6ndxeat1TVf4y70GGv2HkjPwdWAd+74oJJP50kHZUNO298cvvgEmRWl5n7\n1fRuQTaf84CN/a8dwD8cfVmHt6Ef7NC7K8PgD02SjjXDGbUUmbVguFfV14GfHKbLVuAz1bMXeEGS\nl46rwGGvmOeHMl+7JC2n+YJ80gE/jjX3k3jqDYRn+21Pk2RHkpkkM3Nzc0f0ZPPd28x7nknSL40j\n3DOibeT/Ea6qXVU1XVXTU1ML/t+bkVYtsl2SnonGEe6zPPXu8OuA+8fwuCPNd/LUk6qSjkXznTyd\n9EnVcYT7buBN6TkbeGTSd705eMUFT87UV7E0Z54l6UgNZ9RSZFaXSyGvAc4B1iaZBd4LPBugqj4G\n7KF3GeR+epdC/vGkih3kTF3SSrLUk9AFw72qti9wvIA/G1tFkqSj5idUJalBhrskNchwl6QGGe6S\n1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkN\nMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDD\nXZIaZLhLUoM6hXuSzUn2JdmfZOeI4ycnuTnJHUnuSnL++EuVJHW1YLgnWQVcBZwHbAK2J9k01O0v\ngeuq6kxgG/D34y5UktRdl5n7WcD+qjpQVY8D1wJbh/oUcEJ/+/nA/eMrUZK0WF3C/STgvoH92X7b\noPcBFyWZBfYA7xj1QEl2JJlJMjM3N3cE5UqSuugS7hnRVkP724Grq2odcD7w2SRPe+yq2lVV01U1\nPTU1tfhqJUmddAn3WWD9wP46nr7scjFwHUBVfRN4DrB2HAVKkhavS7jfBmxMcmqSNfROmO4e6vND\n4FyAJK+kF+6uu0jSMlkw3KvqEHAJcBNwL72rYu5OcnmSLf1u7wbemuTbwDXAW6pqeOlGkrREVnfp\nVFV76J0oHWy7bGD7HuA14y1NknSk/ISqJDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwl\nqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIa\nZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJalCncE+yOcm+JPuT\n7JynzxuT3JPk7iSfG2+ZkqTFWL1QhySrgKuA3wZmgduS7K6qewb6bATeA7ymqh5O8uJJFSxJWliX\nmftZwP6qOlBVjwPXAluH+rwVuKqqHgaoqgfHW6YkaTG6hPtJwH0D+7P9tkGnAacl+UaSvUk2j3qg\nJDuSzCSZmZubO7KKJUkL6hLuGdFWQ/urgY3AOcB24BNJXvC0b6raVVXTVTU9NTW12FolSR11CfdZ\nYP3A/jrg/hF9vlRVT1TV94F99MJekrQMuoT7bcDGJKcmWQNsA3YP9fki8HqAJGvpLdMcGGehkqTu\nFgz3qjoEXALcBNwLXFdVdye5PMmWfrebgB8nuQe4GfjzqvrxpIqWJB1eqoaXz5fG9PR0zczMLMtz\nS9JKleT2qppeqJ+fUJWkBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLU\nIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y\n3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJalCncE+yOcm+JPuT7DxMvwuTVJLp8ZUoSVqs\nBcM9ySrgKuA8YBOwPcmmEf2OB94J3DruIiVJi9Nl5n4WsL+qDlTV48C1wNYR/d4PfBB4dIz1SZKO\nQJdwPwm4b2B/tt/2pCRnAuur6obDPVCSHUlmkszMzc0tulhJUjddwj0j2urJg8mzgCuBdy/0QFW1\nq6qmq2p6amqqe5WSpEXpEu6zwPqB/XXA/QP7xwNnALckOQicDez2pKokLZ8u4X4bsDHJqUnWANuA\n3b84WFWPVNXaqtpQVRuAvcCWqpqZSMWSpAUtGO5VdQi4BLgJuBe4rqruTnJ5ki2TLlCStHiru3Sq\nqj3AnqG2y+bpe87RlyVJOhp+QlWSGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNd\nkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWp\nQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1qFO4J9mcZF+S/Ul2jjj+\nriT3JLkryVeTnDL+UiVJXS0Y7klWAVcB5wGbgO1JNg11uwOYrqpXAdcDHxx3oZKk7rrM3M8C9lfV\ngap6HLgW2DrYoapurqqf9Xf3AuvGW6YkaTG6hPtJwH0D+7P9tvlcDHx51IEkO5LMJJmZm5vrXqUk\naVG6hHtGtNXIjslFwDTwoVHHq2pXVU1X1fTU1FT3KiVJi7K6Q59ZYP3A/jrg/uFOSd4AXAq8rqoe\nG095kqQj0WXmfhuwMcmpSdYA24Ddgx2SnAl8HNhSVQ+Ov0xJ0mIsGO5VdQi4BLgJuBe4rqruTnJ5\nki39bh8Cngd8IcmdSXbP83CSpCXQZVmGqtoD7Blqu2xg+w1jrkuSdBT8hKokNchwl6QGGe6S1CDD\nXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwl\nqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIa\nZLhLUoMMd0lq0OounZJsBj4CrAI+UVVXDB0/DvgM8OvAj4E/rKqD4y31qTbsvPHJ7YNXXDDJp5Kk\no3b6e27ksYLjAvs+MPnMWnDmnmQVcBVwHrAJ2J5k01C3i4GHq+pXgSuBvx53oYMGg33UviQdSzbs\n7AU7wGO1NJnVZVnmLGB/VR2oqseBa4GtQ322Ap/ub18PnJsk4yvzl+b7oRjwko5Fp79ndDbN1z4u\nXcL9JOC+gf3ZftvIPlV1CHgEeNHwAyXZkWQmyczc3NyRVSxJK8gvZuxd28elS7iPmoEPl9WlD1W1\nq6qmq2p6amqqS32StKIdN88axnzt49Il3GeB9QP764D75+uTZDXwfOAn4yhw2HwnTz2pKulYNN/J\n00mfVO0S7rcBG5OcmmQNsA3YPdRnN/Dm/vaFwNeqamJ/dAwHucEu6Vh28IoLnpypH5elyawFL4Ws\nqkNJLgFuoncp5Cer6u4klwMzVbUb+Efgs0n205uxb5tk0WCgS1pZluLyx0GdrnOvqj3AnqG2ywa2\nHwX+YLylSZKOlJ9QlaQGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ3KBD9rdPgnTuaAHxzlw6wFHhpD\nOSuF423fM23MjnfxTqmqBf9/y7KF+zgkmamq6eWuY6k43vY908bseCfHZRlJapDhLkkNWunhvmu5\nC1hijrd9z7QxO94JWdFr7pKk0Vb6zF2SNILhLkkNWhHhnmRzkn1J9ifZOeL4cUk+3z9+a5INS1/l\n+HQY77uS3JPkriRfTXLKctQ5LguNd6DfhUkqyYq+dK7LeJO8sf8a353kc0td4zh1eD+fnOTmJHf0\n39PnL0ed45Lkk0keTPLdeY4nyUf7P4+7krx6IoVU1TH9Re8GId8DXg6sAb4NbBrq86fAx/rb24DP\nL3fdEx7v64Hn9rff3vp4+/2OB74O7AWml7vuCb++G4E7gBP7+y9e7ronPN5dwNv725uAg8td91GO\n+bXAq4HvznP8fODL9O49fTZw6yTqWAkz97OA/VV1oKoeB64Ftg712Qp8ur99PXBukgnffnZiFhxv\nVd1cVT/r7+6ld1/blarL6wvwfuCDwKNLWdwEdBnvW4GrquphgKp6cIlrHKcu4y3ghP7283n6PZpX\nlKr6Ooe/h/RW4DPVsxd4QZKXjruOlRDuJwH3DezP9ttG9qmqQ8AjwIuWpLrx6zLeQRfTmwWsVAuO\nN8mZwPqqumEpC5uQLq/vacBpSb6RZG+SzUtW3fh1Ge/7gIuSzNK749s7lqa0ZbPY3/Ej0uk2e8ts\n1Ax8+PrNLn1Wis5jSXIRMA28bqIVTdZhx5vkWcCVwFuWqqAJ6/L6rqa3NHMOvb/K/i3JGVX10wnX\nNgldxrsduLqq/ibJb9K7H/MZVfV/ky9vWSxJXq2EmfsssH5gfx1P/7PtyT5JVtP70+5wfxYdy7qM\nlyRvAC4FtlTVY0tU2yQsNN7jgTOAW5IcpLdGuXsFn1Tt+n7+UlU9UVXfB/bRC/uVqMt4LwauA6iq\nbwLPofcPtlrV6Xf8aK2EcL8N2Jjk1CRr6J0w3T3UZzfw5v72hcDXqn/mYgVacLz9ZYqP0wv2lbwe\nCwuMt6oeqaq1VbWhqjbQO8ewpapmlqfco9bl/fxFeifNSbKW3jLNgSWtcny6jPeHwLkASV5JL9zn\nlrTKpbUbeFP/qpmzgUeq6oGxP8tyn1nuePb5fOA/6Z11v7Tfdjm9X3LovRm+AOwHvgW8fLlrnvB4\nvwL8N3Bn/2v3ctc8yfEO9b2FFXy1TMfXN8CHgXuA7wDblrvmCY93E/ANelfS3An8znLXfJTjvQZ4\nAHiC3iz9YuBtwNsGXt+r+j+P70zq/ey/H5CkBq2EZRlJ0iIZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5J\nDTLcJalB/w9VNsz0Pc1ulQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x78ff255208>"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=53, n_jobs=1,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
+     "execution_count": 201,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "enc = LabelEncoder()\n",
-    "test_labels_enc = enc.fit_transform(test_labels)\n",
-    "pred_dt_enc = enc.fit_transform(predicted_dt)\n",
-    "df = pd.DataFrame()\n",
-    "df['actual'] = test_labels_enc\n",
-    "df['naive'] = pred_dt_enc\n",
-    "#df['svm'] = \n",
-    "plotGraph(df,\"graph\")"
+    "classifier.fit(train_features,train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "predicted_rf = classifier.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "acc = classifier.score(test_features,test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(acc*100)"
    ]
   },
   {
