--- a/Text_classification_newsGroupData.ipynb
+++ b/Text_classification_newsGroupData.ipynb
@@ -27,7 +27,8 @@
    "outputs": [],
    "source": [
     "#load 20_Newsgroups train_data\n",
-    "train_data = fetch_20newsgroups(subset='train',shuffle=True)"
+    "train_data = fetch_20newsgroups(subset='train',shuffle=True)\n",
+    "test_data = fetch_20newsgroups(subset='test',shuffle=True)"
    ]
   },
   {
@@ -72,20 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#First document\n",
     "#type(train_data.data)\n",
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +174,7 @@
        "(11314, 130107)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +194,7 @@
        "11314"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +214,7 @@
        "array([7, 4, 4, ..., 3, 1, 8])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -268,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7532, 93564)"
+       "(7532, 130107)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +298,7 @@
        "sklearn.utils.Bunch"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +351,7 @@
        "0.7738980350504514"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +436,7 @@
        "0.82381837493361654"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +512,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,8 +523,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predicted_knn = negih.predict(X_test_tfidf)"
@@ -540,8 +534,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "acc = negih.score(X_test_tfidf,test_data.target)"
@@ -549,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -584,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -595,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +605,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -631,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -642,19 +638,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.550318640467\n"
+      "0.554567180032\n"
      ]
     }
    ],
    "source": [
     "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "classifier = RandomForestClassifier(n_estimators = 42, criterion = 'entropy', random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=42, n_jobs=1,\n",
+       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.fit(X_trian_tfidf,train_data.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "predicted_rf = classifier.predict(X_test_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "acc = classifier.score(X_test_tfidf,test_data.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55.3903345725\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(acc*100)"
    ]
   },
   {
